--- a/app/books/webapp/test/flpSandbox.html
+++ b/app/books/webapp/test/flpSandbox.html
@@ -45,7 +45,7 @@
             },
             applications: {
                 "comsapsatinfotechbooks-tile": {
-                    title: "books information",
+                    title: "Books Info",
                     description: "An SAP Fiori application.",
                     additionalInformation: "SAPUI5.Component=com.sap.satinfotech.books",
                     applicationType: "URL",
