--- a/app/books/webapp/index.html
+++ b/app/books/webapp/index.html
@@ -15,7 +15,7 @@
         src="https://sapui5.hana.ondemand.com/1.127.2/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
-            "com.sap.satinfotech.books": "./"
+            "books": "./"
         }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="com.sap.satinfotech.books"
+        data-name="books"
         data-id="container"
-        data-settings='{"id" : "com.sap.satinfotech.books"}'
+        data-settings='{"id" : "books"}'
         data-handle-validation="true"
     ></div>
 </body>
