--- a/app/books/webapp/test/flpSandbox.html
+++ b/app/books/webapp/test/flpSandbox.html
@@ -44,10 +44,10 @@
                 }
             },
             applications: {
-                "comsapsatinfotechbooks-tile": {
+                "books-tile": {
                     title: "Books Info",
                     description: "An SAP Fiori application.",
-                    additionalInformation: "SAPUI5.Component=com.sap.satinfotech.books",
+                    additionalInformation: "SAPUI5.Component=books",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -65,7 +65,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"com.sap.satinfotech.books": "../"}'
+        data-sap-ui-resourceroots='{"books": "../"}'
         data-sap-ui-frameOptions="allow"
         data-sap-ui-flexibilityServices='[{"connector": "LocalStorageConnector"}]'>
     </script>
